--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+  - "_posts/OSCamp-D3-rCore-Chapter-1-练习.md"
 
 # Writing
 new_post_name: :title.md # File name of new posts
